--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,12 @@ h1, h2, h3{
     padding: 10px;
     margin-top: 15px;
     border-radius: 100%;
+    
 }
 
 .badge{
-    height: 160px;
+    max-height: 160px;
+    
 
 }
 
@@ -97,3 +99,4 @@ textarea.form-control::placeholder {
     background-size: cover;
     background-position: 50% 50%;
     }
+
